--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -44,7 +44,9 @@
     "request-debug": "^0.2.0",
     "sinon": "^3.2.1",
     "supertest": "^3.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@babel/cli": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "config": {
     "docker": {
