--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -64,7 +64,9 @@
     "nock": "^9.2.5",
     "sinon": "^5.0.7",
     "supertest": "^3.0.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@babel/cli": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "config": {
     "docker": {
