--- a/magda-esri-portal-connector/package.json
+++ b/magda-esri-portal-connector/package.json
@@ -32,7 +32,9 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "@babel/cli": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "dependencies": {
     "@magda/registry-aspects": "^0.0.56-0",
