--- a/magda-minion-framework/package.json
+++ b/magda-minion-framework/package.json
@@ -34,7 +34,9 @@
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
     "testcheck": "^1.0.0-rc.2",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@babel/cli": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "dependencies": {
     "@magda/registry-aspects": "^0.0.56-0",
