--- a/magda-minion-visualization/package.json
+++ b/magda-minion-visualization/package.json
@@ -21,7 +21,9 @@
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.48.1",
     "@types/urijs": "^1.15.31",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@babel/cli": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0"
   },
   "dependencies": {
     "@magda/minion-framework": "^0.0.56-0",
