Fixed the issue of modifying date string in text input using backspaces to an empty string will cause text input to reset text input

--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -50,7 +50,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^0.2.1",
     "react-async-hook": "^3.4.0",
-    "react-dates": "^20.1.0",
+    "react-dates": "magda-io/react-dates#magda",
     "react-file-drop": "^0.2.7",
     "react-i18next": "^8.1.0",
     "react-leaflet": "^2.2.1",
