--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash": "^4.17.5",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.3.0",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "webpack": "3.12.0"
   },
   "scripts": {
     "build": "lerna run build --stream --concurrency=1",
