--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^1.16.4",
     "pretty-quick": "^1.3.0",
     "rimraf": "^3.0.0",
-    "webpack": "3.12.0"
+    "webpack": "3.12.0",
+    "ts-module-alias-transformer": "^1.0.4"
   },
   "scripts": {
     "build": "lerna run build --stream --concurrency=1",
