--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/datastore-api",
-  "version": "0.0.56-terria-0",
+  "version": "0.0.57",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig.json",
