Pass addDatasetThemes config to web-client

--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -38,3 +38,4 @@ mandatoryFields:
   - files.license
   - informationSecurity.classification
   - informationSecurity.disseminationLimits
+addDatasetThemes: []
