--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -21,6 +21,7 @@ data:
     "maxChartProcessingRows": {{ toJson .Values.maxChartProcessingRows | quote }},
     "maxTableProcessingRows": {{ toJson .Values.maxTableProcessingRows | quote }},
     "csvLoaderChunkSize": {{ toJson .Values.csvLoaderChunkSize | quote }},
+    "addDatasetThemes": {{ toJson .Values.addDatasetThemes | quote }},
     {{- if .Values.mandatoryFields }}
     "mandatoryFields": {{ toJson .Values.mandatoryFields | quote }}
     {{- end }}
