--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -39,6 +39,17 @@ web-server:
   fallbackUrl: "https://data.gov.au"
   featureFlags:
     cataloguing: true
+  dateFormats:
+    - YYYY
+    - YYYY-MM
+    - DD-MM-YYYY
+    - MM-DD-YYYY
+    - YYYY-MM-DD
+    - YYYY-MM-DDThh:mmTZD
+    - YYYY-MM-DDThh:mm:ssTZD
+    - YYYY-MM-DDThh:mm:ss.sTZD
+    - DD-MMM-YYYY
+    - MMM-DD-YYYY
 
 connectors:
   includeCronJobs: false
