--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -38,14 +38,19 @@ mandatoryFields:
   - files.license
   - informationSecurity.classification
   - informationSecurity.disseminationLimits
-dateFormats:
-  - YYYY
-  - YYYY-MM
-  - DD-MM-YYYY
-  - MM-DD-YYYY
-  - YYYY-MM-DD
-  - YYYY-MM-DDThh:mmTZD
-  - YYYY-MM-DDThh:mm:ssTZD
-  - YYYY-MM-DDThh:mm:ss.sTZD
-  - DD-MMM-YYYY
-  - MMM-DD-YYYY
+dateConfig:
+  dateFormats:
+    - YYYY
+    - YYYY-MM
+    - DD-MM-YYYY
+    - MM-DD-YYYY
+    - YYYY-MM-DD
+    - YYYY-MM-DDThh:mmTZD
+    - YYYY-MM-DDThh:mm:ssTZD
+    - YYYY-MM-DDThh:mm:ss.sTZD
+    - DD-MMM-YYYY
+    - MMM-DD-YYYY
+  dateRegexes:
+      dateRegex: "(date|dt|year|decade)"
+      startDateRegex: "(start|st).*(date|dt|year|decade)"
+      endDateRegex: "(end).*(date|dt|year|decade)"
