--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -84,10 +84,18 @@ web-server:
   fallbackUrl: "https://data.gov.au"
   featureFlags:
     cataloguing: true
+    previewAddDataset: true
   vocabularyApiEndpoints: 
     - "https://vocabs.ands.org.au/repository/api/lda/abares/australian-land-use-and-management-classification/version-8/concept.json"
     - "https://vocabs.ands.org.au/repository/api/lda/neii/australian-landscape-water-balance/version-1/concept.json"
     - "https://vocabs.ands.org.au/repository/api/lda/ands-nc/controlled-vocabulary-for-resource-type-genres/version-1-1/concept.json"
+  addDatasetThemes:
+    - Education Box
+    - Portable Document Format
+    - Forms
+    - Forest
+    - Water
+    - Land
 
 correspondence-api:
   alwaysSendToDefaultRecipient: true
