Allows options `noManualKeywords` & `noManualThemes` are configurable from helm

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -22,6 +22,8 @@ data:
     "maxTableProcessingRows": {{ toJson .Values.maxTableProcessingRows | quote }},
     "csvLoaderChunkSize": {{ toJson .Values.csvLoaderChunkSize | quote }},
     "addDatasetThemes": {{ toJson .Values.addDatasetThemes | quote }},
+    "noManualThemes": {{ .Values.noManualThemes }},
+    "noManualKeywords": {{ .Values.noManualKeywords }},
     {{- if .Values.mandatoryFields }}
     "mandatoryFields": {{ toJson .Values.mandatoryFields | quote }}
     {{- end }}
