--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -39,3 +39,5 @@ mandatoryFields:
   - informationSecurity.classification
   - informationSecurity.disseminationLimits
 addDatasetThemes: []
+noManualThemes: false
+noManualKeywords: false
