Add initial test config

--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -9,7 +9,8 @@
     "dev": "run-typescript-in-nodemon src/index.ts --config config.json",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
-    "prettier": "prettier --write \"**/*\""
+    "prettier": "prettier --write \"**/*\"",
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
     "@google-cloud/storage": "^4.1.0",
