Add download and upload tests

--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -10,7 +10,7 @@
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
     "prettier": "prettier --write \"**/*\"",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*storage.spec.ts\""
   },
   "dependencies": {
     "@google-cloud/storage": "^4.1.0",
