Add CI config to storage/package.json

--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -41,5 +41,11 @@
       "name": "data61/magda-datastore-api",
       "include": "node_modules dist Dockerfile"
     }
+  },
+  "magda": {
+    "language": "typescript",
+    "categories": {
+      "api": true
+    }
   }
 }
