--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -66,7 +66,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "testStandAlone": false
     }
   },
   "nyc": {
