--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -101,7 +101,8 @@
   "magda": {
     "language": "typescript",
     "categories": {
-      "api": true
+      "api": true,
+      "testStandAlone": false
     }
   },
   "_moduleMappings": {
