--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -324,6 +324,45 @@ buildtest:typescript-apis:
       - "*/dist"
     expire_in: 7 days
 
+buildtest:storage-api:
+  stage: buildtest
+  image: registry.gitlab.com/magda-data/magda/data61/magda-builder-docker:$CI_COMMIT_REF_SLUG
+  retry: 1
+  dependencies:
+    - builders-and-yarn
+    - registry-typescript-api
+  before_script:
+    - |
+      if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
+        export DOCKER_HOST='tcp://localhost:2375'
+      fi
+    - docker info
+    - apk update
+    - apk upgrade
+    - apk add python3 python3-dev py3-pip build-base openssl-dev libffi-dev
+    - pip3 install --upgrade pip
+    - pip3 install docker-compose
+    - docker-compose --version
+  cache:
+    key: $CI_JOB_NAME-$CACHE_VERSION
+    paths:
+      - "$CI_PROJECT_DIR/pip-cache"
+  services:
+    - docker:dind
+  variables:
+    PIP_CACHE_DIR: "$CI_PROJECT_DIR/pip-cache"
+    # OPA_URL: "http://docker:8181/"
+  script:
+    - cd magda-storage-api
+    - docker-compose up -d
+    - yarn run build
+    - yarn run test
+    - docker-compose down
+  artifacts:
+    paths:
+      - "*/dist"
+    expire_in: 7 days
+
 buildtest:minions:
   stage: buildtest
   image: registry.gitlab.com/magda-data/magda/data61/magda-builder-nodejs:$CI_COMMIT_REF_SLUG
