--- a/magda-esri-portal-connector/package.json
+++ b/magda-esri-portal-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/esri-portal-connector",
   "description": "MAGDA Esri Portal Connector",
-  "version": "0.0.56-terria-1b",
+  "version": "0.0.56-terria-1d",
   "scripts": {
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
