--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -356,6 +356,8 @@ buildtest:storage-api:
     - cd magda-storage-api
     - docker-compose up -d
     - lerna run build --scope=@magda/storage-api --include-filtered-dependencies
+    - export MINIO_HOST=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' `docker ps | egrep -i minio | cut -d' ' -f1`)
+    - echo "Mino Host is $MINIO_HOST"
     - yarn run build
     - yarn run test
     - docker-compose down
