Set moduleAlias; add healthchecks back; Use only port 9000

--- a/magda-storage-api/docker-compose.yml
+++ b/magda-storage-api/docker-compose.yml
@@ -10,11 +10,16 @@ services:
       - data1-1:/data1
       - data1-2:/data2
     ports:
-      - "9001:9000"
+      - "9000:9000"
     environment:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
     command: server /tmp
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
 ## By default this config uses default local driver,
 ## For custom volumes replace with volume driver configuration.
