--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.57-0",
   "scripts": {
     "build": "yarn run compile",
-    "compile": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json --watch",
+    "compile": "tsc -b && ts-module-alias-transformer dist",
+    "watch": "tsc -b --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts --config config.json",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/storage": "^4.1.0",
     "@magda/typescript-common": "0.0.57-0",
+    "@types/cross-spawn": "^6.0.1",
     "@types/superagent": "^4.1.4",
     "@types/xmldom": "^0.1.29",
     "express": "^4.13.1",
@@ -24,6 +25,7 @@
     "yargs": "^12.0.5"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.1",
     "@types/express": "^4.0.35",
     "@types/lru-cache": "^5.1.0",
     "@types/minio": "^7.0.4",
@@ -48,5 +50,8 @@
       "api": true,
       "testStandAlone": true
     }
+  },
+  "_moduleMappings": {
+    "magda-typescript-common/src": "@magda/typescript-common/dist"
   }
 }
