--- a/magda-storage-api/tsconfig.json
+++ b/magda-storage-api/tsconfig.json
@@ -1,12 +1,11 @@
 {
+    "extends": "../tsconfig-global.json",
     "compilerOptions": {
-        "target": "es2018",
-        "lib": ["es2018"],
-        "outDir": "dist",
-        "baseUrl": ".",
-        "sourceMap": true,
-        "strict": true,
-        "module": "commonjs"
+        "outDir": "./dist",
+        "strictNullChecks": false,
+        "rootDir": "./src",
+        "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
     },
-    "include": ["src"]
+    "references": [{ "path": "../magda-typescript-common" }],
+    "include": ["./src", "./src/**/*.json"]
 }
