--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -26,6 +26,7 @@
     "@types/mocha": "^2.2.41",
     "@types/nock": "^8.2.1",
     "@types/read-pkg-up": "^3.0.1",
+    "@types/shortid": "^0.0.29",
     "@types/sinon": "^4.1.3",
     "@types/superagent": "^3.5.5",
     "@types/supertest": "^2.0.3",
@@ -55,6 +56,7 @@
     "moment": "^2.17.1",
     "read-pkg-up": "^3.0.0",
     "request": "^2.88.0",
+    "shortid": "^2.2.15",
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
     "uuid": "^3.1.0",
