--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts --config config.json",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
-    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto --repository asia.gcr.io/terriajs-automated-deployment",
+    "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "prettier": "prettier --write \"**/*\"",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*storage.spec.ts\""
   },
