change name addDatasetThemes to datasetThemes

--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -54,4 +54,4 @@ dateConfig:
       dateRegex: "(date|dt|year|decade)"
       startDateRegex: "(start|st).*(date|dt|year|decade)"
       endDateRegex: "(end).*(date|dt|year|decade)"
-addDatasetThemes: []
+datasetThemes: []
