--- a/magda-storage-api/package.json
+++ b/magda-storage-api/package.json
@@ -11,7 +11,8 @@
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "prettier": "prettier --write \"**/*\"",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*storage.spec.ts\""
+    "retag-and-push": "retag-and-push",
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
     "@google-cloud/storage": "^4.1.0",
@@ -26,13 +27,13 @@
     "yargs": "^12.0.5"
   },
   "devDependencies": {
+    "@magda/scripts": "^0.0.57-0",
     "@types/cross-spawn": "^6.0.1",
     "@types/express": "^4.0.35",
     "@types/lru-cache": "^5.1.0",
     "@types/minio": "^7.0.4",
     "@types/urijs": "^1.19.4",
     "@types/yargs": "^12.0.8",
-    "create-docker-context-for-node-component": "^1.0.1",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "run-typescript-in-nodemon": "^1.0.0",
