--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -558,6 +558,11 @@ dockerize:dockerExtensions:
     - JWT_SECRET="${JWT_SECRET:-$(pwgen 16 1)}"
     - SESSION_SECRET="${SESSION_SECRET:-$(pwgen 16 1)}"
     - DB_PASSWORD="${DB_PASSWORD:-p4ssw0rd}"
+    - MINIO_HOST="${MINIO_HOST:-localhost}"
+    - MINIO_PORT="${MINIO_PORT:-9000}"
+    - MINIO_ACCESS_KEY="${MINIO_ACCESS_KEY:-}"
+    - MINIO_SECRET_KEY="${MINIO_SECRET_KEY:-}"
+    - BUCKET="${BUCKET:-magda-test-1}"
 
     # Kube Config
     - echo "$KUBECTL_CONFIG" > kubectlconfig.yaml
@@ -574,6 +579,7 @@ dockerize:dockerExtensions:
     - "kubectl create secret generic smtp-secret --from-literal=username=$SMTP_USERNAME --from-literal=password=$SMTP_PASSWORD --namespace $CI_COMMIT_REF_SLUG --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -"
     - echo "$DB_SERVICE_ACCOUNT_PRIVATE_KEY" > db-service-account-private-key.json
     - kubectl create secret generic storage-account-credentials --from-file db-service-account-private-key.json --namespace $CI_COMMIT_REF_SLUG --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
+    - kubectl create secret generic storage-secrets --from-literal=minio-access-key=$MINIO_ACCESS_KEY --from-literal=minio-secret-key=$MINIO_SECRET_KEY --from-literal=minio-host=$MINIO_HOST --from-literal=minio-port=$MINIO_PORT --from-literal=bucket=$BUCKET --namespace $CI_COMMIT_REF_SLUG --dry-run -o json | kubectl apply --namespace $CI_COMMIT_REF_SLUG -f -
 
     # Helm upgrade
     - helm init --upgrade
