--- a/deploy/helm/magda/charts/minion-ckan-sync/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/minion-ckan-sync/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: minion-ckan-sync
+spec:
   replicas: 1
   strategy:
     rollingUpdate:
