Fixed: if featureFlags are not set, edit buttons are always shown on dataset page

--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -17,7 +17,9 @@ disableAuthenticationFeatures: false
 service: {}
 useLocalStyleSheet: false
 contentApiBaseUrlInternal: "http://content-api/v0/"
-featureFlags: {}
+featureFlags:
+ cataloguing: false
+ previewAddDataset: false
 vocabularyApiEndpoints: []
 defaultContactEmail: "mail@example.com"
 custodianOrgLevel: 2
