--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -34,6 +34,7 @@ defaultRoutes:
     auth: true
   registry-read-only:
     to: http://registry-api-read-only/v0
+    auth: true
   registry-auth: #left here for legacy reasons - use /registry
     to: http://registry-api/v0
     auth: true
