--- a/deploy/helm/magda/charts/registry-api/Chart.yaml
+++ b/deploy/helm/magda/charts/registry-api/Chart.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 description: A Helm chart for Kubernetes
 name: registry-api
 
+dependencies:
+  - name: minio
+    version: 4.0.1
+    repository: https://kubernetes-charts.storage.googleapis.com
