- Added horizontal pod autoscalers to more services - turn horizontal pod autoscalers off be default

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -6,6 +6,7 @@ spec:
   strategy:
     rollingUpdate:
       maxUnavailable: {{ .Values.global.rollingUpdate.maxUnavailable | default 0 }}
+  replicas: {{ .Values.replicas | default 1 }}
   template:
     metadata:
       labels:
