--- a/deploy/helm/magda/charts/content-api/values.yaml
+++ b/deploy/helm/magda/charts/content-api/values.yaml
@@ -1,4 +1,9 @@
 image: {}
+autoscaler:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 80
 resources:
   requests:
     cpu: 10m
