--- a/deploy/helm/magda/charts/registry-api/values.yaml
+++ b/deploy/helm/magda/charts/registry-api/values.yaml
@@ -1,4 +1,10 @@
 image: {}
+# autoscaler is only for readonly instance
+autoscaler:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 80
 livenessProbe: {}
 db: {}
 resources: 
