--- a/deploy/helm/magda/charts/minio-server/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/minio-server/templates/deployment.yaml
@@ -130,14 +130,14 @@ spec:
           env:
             - name: MINIO_ACCESS_KEY
               valueFrom:
-                secretKeyRef:
-                  name: {{ if .Values.existingSecret }}{{ .Values.existingSecret }}{{ else }}{{ template "minio.fullname" . }}{{ end }}
-                  key: accesskey
+              secretKeyRef:
+                name: storage-secrets
+                key: minio-access-key
             - name: MINIO_SECRET_KEY
               valueFrom:
-                secretKeyRef:
-                  name: {{ if .Values.existingSecret }}{{ .Values.existingSecret }}{{ else }}{{ template "minio.fullname" . }}{{ end }}
-                  key: secretkey
+              secretKeyRef:
+                name: storage-secrets
+                key: minio-secret-key
             {{- if .Values.gcsgateway.enabled }}
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: "/etc/credentials/gcs_key.json"
