--- a/deploy/helm/magda/charts/minio-server/values.yaml
+++ b/deploy/helm/magda/charts/minio-server/values.yaml
@@ -53,9 +53,7 @@ priorityClassName: ""
 ## AccessKey and secretKey is generated when not set
 ## Distributed Minio ref: https://docs.minio.io/docs/distributed-minio-quickstart-guide
 ##
-# existingSecret: ""
-# accessKey: "AKIAIOSFODNN7EXAMPLE"
-# secretKey: "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
+existingSecret: ""
 configPath: "/root/.minio/"
 configPathmc: "/root/.mc/"
 mountPath: "/export"
