Put back minio-user

--- a/deploy/helm/magda/charts/minio/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/minio/templates/deployment.yaml
@@ -190,6 +190,9 @@ spec:
           emptyDir: {}
         {{- end }}
         {{- end }}
+        - name: minio-user
+          secret:
+            secretName: storage-secrets
         - name: minio-config-dir
           emptyDir: {}
         {{- if .Values.tls.enabled }}
