--- a/magda-elastic-search/package.json
+++ b/magda-elastic-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/elastic-search",
-  "version": "0.0.55-RC1",
+  "version": "0.0.55",
   "description": "MAGDA's custom elasticsearch docker image.",
   "scripts": {
     "dev": "docker-compose up",
@@ -58,7 +58,7 @@
     }
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.55-RC1"
+    "@magda/scripts": "^0.0.55"
   },
   "magda": {
     "categories": {
