--- a/magda-migrator-content-db/package.json
+++ b/magda-migrator-content-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-content-db",
-  "version": "0.0.55-RC1",
+  "version": "0.0.55",
   "description": "The MAGDA database for storing content data.",
   "license": "Apache-2.0",
   "scripts": {
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.55-RC1",
-    "@magda/scripts": "^0.0.55-RC1"
+    "@magda/db-migrator": "^0.0.55",
+    "@magda/scripts": "^0.0.55"
   },
   "magda": {
     "categories": {
