--- a/magda-migrator-registry-db/package.json
+++ b/magda-migrator-registry-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-registry-db",
-  "version": "0.0.55-RC1",
+  "version": "0.0.55",
   "description": "The registry's PostgreSQL database.",
   "scripts": {
     "dev": "echo \"No dev mode available, use helm instead.\"",
@@ -17,8 +17,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.55-RC1",
-    "@magda/scripts": "^0.0.55-RC1"
+    "@magda/db-migrator": "^0.0.55",
+    "@magda/scripts": "^0.0.55"
   },
   "magda": {
     "categories": {
