--- a/magda-migrator-tenant-db/package.json
+++ b/magda-migrator-tenant-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-tenant-db",
-  "version": "0.0.56-RC5",
+  "version": "0.0.57-0",
   "description": "The MAGDA database for storing tenant data.",
   "license": "Apache-2.0",
   "scripts": {
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.56-RC5",
-    "@magda/scripts": "^0.0.56-RC5"
+    "@magda/db-migrator": "^0.0.57-0",
+    "@magda/scripts": "^0.0.57-0"
   },
   "magda": {
     "categories": {
