Make region configurable

--- a/magda-storage-api/config.example.json
+++ b/magda-storage-api/config.example.json
@@ -4,5 +4,6 @@
     "minioSecretKey": "",
     "minioEnableSSL": true,
     "minioHost": "localhost",
-    "minioPort": 9000
+    "minioPort": 9000,
+    "minioRegion": "us-east-1"
 }
