More attempts at fixing this chunk problem

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -18,8 +18,7 @@ data:
     "defaultContactEmail": {{ toJson .Values.defaultContactEmail }},
     {{- end }}
     "custodianOrgLevel": {{ toJson .Values.custodianOrgLevel | quote }},
-    "maxChartProcessingRows": {{ toJson .Values.maxChartProcessingRows | quote }},
-    "maxTableProcessingRows": {{ toJson .Values.maxTableProcessingRows | quote }},
+    "maxCsvProcessingRows": {{ toJson .Values.maxCsvProcessingRows | quote }},
     "csvLoaderChunkSize": {{ toJson .Values.csvLoaderChunkSize | quote }},
     {{- if .Values.mandatoryFields }}
     "mandatoryFields": {{ toJson .Values.mandatoryFields | quote }}
