--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -23,8 +23,7 @@ featureFlags:
 vocabularyApiEndpoints: []
 defaultContactEmail: "mail@example.com"
 custodianOrgLevel: 2
-maxChartProcessingRows: 20000
-maxTableProcessingRows: 200
+maxCsvProcessingRows: 20000
 # default chunk size 2MB
 csvLoaderChunkSize: 2097152
 mandatoryFields:
