--- a/magda-storage-api/config.example.json
+++ b/magda-storage-api/config.example.json
@@ -5,5 +5,6 @@
     "minioEnableSSL": true,
     "minioHost": "localhost",
     "minioPort": 9000,
-    "minioRegion": "us-east-1"
+    "minioRegion": "us-east-1",
+    "authApiUrl": "http://localhost:6104"
 }
