--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -61,7 +61,8 @@
     "retext-keywords": "^4.0.2",
     "rrule": "^2.6.2",
     "source-map-explorer": "^1.7.0",
-    "urijs": "^1.19.1"
+    "urijs": "^1.19.1",
+    "use-debounce": "^3.3.0"
   },
   "devDependencies": {
     "@craco/craco": "^5.0.2",
